<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/friendlyLoanAccountForm"
    style="@style/formContainer">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="@string/imLending"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/dark_gray"
            android:paddingBottom="10dp" />

        <TextView
            android:text="@string/imBorrowing"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/dark_gray"
            android:paddingBottom="10dp" />

    </LinearLayout>

    <LinearLayout style="@style/formRow">

        <TextView
            android:text="@string/friendName"
            style="@style/formTextTittle" />

        <EditText
            android:hint="@string/name"
            style="@style/formEditText" />

    </LinearLayout>

    <LinearLayout style="@style/formRow">

        <TextView
            android:text="@string/amount"
            style="@style/formTextTittle" />

        <EditText
            android:hint="0.0"
            style="@style/formEditText"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout style="@style/formRow"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/description"
            style="@style/formTextTittle" />

        <EditText
            android:hint="@string/description"
            style="@style/formEditText"
            android:layout_height="100dp"
            android:gravity="start"/>

    </LinearLayout>

</LinearLayout>