<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/cashAccountForm"
    style="@style/formContainer">

    <LinearLayout style="@style/formRow">

        <TextView
            android:text="@string/entity"
            style="@style/formTextTittle" />

        <EditText
            android:hint="@string/organization_name"
            style="@style/formEditText" />

    </LinearLayout>

    <LinearLayout style="@style/formRow">

        <TextView
            android:text="@string/initialBalance"
            style="@style/formTextTittle" />

        <EditText
            android:hint="0.0"
            style="@style/formEditText"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout style="@style/formRow"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/description"
            style="@style/formTextTittle" />

        <EditText
            android:hint="@string/description"
            style="@style/formEditText"
            android:layout_height="100dp"
            android:gravity="start"/>

    </LinearLayout>

</LinearLayout>