<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/addTransactionView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@id/fromTittle"
        android:text="@string/addTransaction"
        style="@style/accountFormTittle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/formContainer">

                <LinearLayout
                    style="@style/formRow">

                    <TextView
                        android:id="@id/fromTittle"
                        android:text="@string/from"
                        style="@style/formTextTittle"/>

                    <TextView
                        android:id="@id/fromAccount"
                        android:hint="@string/account"
                        style="@style/formEditText"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/formRow">

                    <TextView
                        android:id="@id/amountTittle"
                        android:text="@string/amount"
                        style="@style/formTextTittle"/>

                    <EditText
                        android:id="@id/amount"
                        android:hint="0.0"
                        style="@style/formEditText"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/formRow">

                    <TextView
                        android:id="@id/categoryTittle"
                        android:text="@string/category"
                        style="@style/formTextTittle"/>

                    <TextView
                        android:id="@id/category"
                        android:hint="@string/category"
                        style="@style/formEditText"/>

                </LinearLayout>

                <LinearLayout style="@style/formRow">

                    <TextView
                        android:text="@string/description"
                        style="@style/formTextTittle" />

                    <EditText
                        android:hint="@string/description"
                        style="@style/formEditText"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/save_button" />

</LinearLayout>
